--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -1,4 +1,8 @@
 .header {
+    position: fixed;
+    width: 100%;
+    z-index: 5;
+    background: #ffffff;
     // .header__wrapper
 
     &__wrapper {
@@ -54,7 +58,7 @@
 
         @include media-breakpoint-down(xl) {
             justify-content: end;
-            gap: 20px;
+            gap: 31px;
             z-index: 5;
         }
 
@@ -69,6 +73,13 @@
     }
 }
 .container {
+}
+.top-60 {
+    padding-top: 80px;
+
+    @include media-breakpoint-down(xl) {
+        padding-top: 60px;
+    }
 }
 .logo {
 }
@@ -183,55 +194,101 @@
     }
 }
 .search-btn {
+    cursor: pointer;
+
+    &:hover,
+    &:focus,
+    &:active,
+    &._active {
+        .search-btn__icon {
+            fill: #ef7f1a;
+        }
+    }
     // .search-btn__icon
 
     &__icon {
         width: 20px;
+        transition: 0.3s;
     }
 }
 .basket-link {
+    position: relative;
+    &:hover,
+    &:focus,
+    &:active {
+        .basket-link__icon {
+            fill: #ef7f1a;
+        }
+    }
     &__icon {
         width: 24px;
+        transition: 0.3s;
     }
 }
 
 .search-block {
-    position: absolute;
-    top: 65px;
-    right: 130px;
-    padding: 20px 30px;
-    background-color: #f4f4f4;
+    background-color: #211d1db3;
     border-radius: 2px;
     border: 1px solid #8080807a;
-    transition: 0.3s;
-    transform: scale3d(1, 0, 1);
+    transition: 0.5s;
+    height: 0;
+    padding: 0;
+    opacity: 0;
+    position: absolute;
+    z-index: 3;
+    width: 100%;
     visibility: hidden;
 
+    &._active {
+        padding: 20px 0;
+        height: 85px;
+        opacity: 1;
+        visibility: visible;
+
+        @include media-breakpoint-down(lg) {
+            padding: 15px 0;
+            height: 75px;
+        }
+
+        @include media-breakpoint-down(sm) {
+            height: 100vh;
+        }
+    }
+
     &__wrapper {
-        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        gap: 10px;
+
+        @include media-breakpoint-down(sm) {
+            flex-direction: column;
+            width: 80%;
+        }
     }
 
     &__button {
-        position: absolute;
-        top: 3px;
-        right: 2px;
         border: 3px solid #ffffff;
         background-color: #ef7f1a;
         font-size: 18px;
         line-height: 1.5;
         text-transform: uppercase;
         color: #fefefe;
-        width: 80px;
-        height: 40px;
+        width: 200px;
+        height: 42px;
         display: inline-flex;
         justify-content: center;
         align-items: center;
+
+        @include media-breakpoint-down(xs) {
+            width: 100%;
+        }
     }
 
     &__input {
         padding: 5px 20px 5px 15px;
-        height: 45px;
-        width: 280px;
+        height: 42px;
+        width: 100%;
+        max-width: 400px;
         border: 1px solid #ef7f1a;
         border-radius: 2px;
         outline: unset;
@@ -240,6 +297,7 @@
 
 .menu-btn {
     display: none;
+    cursor: pointer;
 
     @include media-breakpoint-down(xl) {
         display: flex;
@@ -253,6 +311,11 @@
         background-color: #ef7f1a;
         border: 3px solid #fefefe;
         border-radius: 50%;
+        transition: 0.3s linear;
+
+        &._active {
+            background-color: #cecece;
+        }
     }
 
     span {
@@ -277,4 +340,21 @@
     @include media-breakpoint-down(xl) {
         display: block;
     }
+}
+
+.counter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ef7f1a;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #fefefe;
+    position: absolute;
+    top: -6px;
+    right: -8px;
 }
