--- a/app/scss/blocks/tabs-section.scss
+++ b/app/scss/blocks/tabs-section.scss
@@ -21,6 +21,10 @@
         grid-auto-flow: column;
         grid-auto-columns: max-content;
         gap: 55px;
+
+        @include media-breakpoint-down(md) {
+            gap: 20px;
+        }
     }
 
     // .tabs__button
@@ -40,6 +44,10 @@
             color: #ef7f1a;
             text-decoration: underline;
         }
+
+        @include media-breakpoint-down(md) {
+            font-size: 24px;
+        }
     }
 
     // .tabs__container
@@ -50,6 +58,9 @@
 .sizes {
     position: relative;
     z-index: 5;
+    display: grid;
+    gap: 10px;
+
     &__wrapper {
         display: flex;
         gap: 10px;
@@ -107,15 +118,45 @@
     &__wrapper {
     }
 
+    &__controls {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        * {
+            z-index: 3;
+        }
+    }
+
     // .best-deal__item
 
     &__item {
         width: 420px;
         padding: 12px;
+        display: grid;
+        gap: 15px;
 
-        &:hover .best-deal__hover {
-            visibility: visible;
-            opacity: 1;
+        &:hover {
+            .best-deal__hover {
+                visibility: visible;
+                opacity: 1;
+            }
+
+            .best-deal__content {
+                color: #ffffff;
+            }
+
+            .best-deal__controls {
+                color: #ffffff;
+            }
+
+            .add-to-basket__icon {
+                fill: #ffffff;
+            }
+        }
+
+        @include media-breakpoint-down(md) {
+            width: 280px;
         }
     }
 
@@ -135,17 +176,25 @@
     // .best-deal__img
 
     &__img {
-        width: 400px;
+        width: 100%;
         height: 529px;
         background-color: #ffffff;
         border: 1px solid #e8e8e8;
+
+        @include media-breakpoint-down(md) {
+            height: 420px;
+        }
     }
 
     // .best-deal__content
 
     &__content {
         display: grid;
-        gap: 20px;
+        gap: 10px;
+
+        * {
+            z-index: 3;
+        }
     }
 
     // .best-deal__name
@@ -176,4 +225,40 @@
     opacity: 0.8;
     width: 100%;
     height: 100%;
+}
+
+.price {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, max-content);
+}
+.cost {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.sale-cost {
+    font-size: 24px;
+    text-decoration: line-through;
+    color: #bbbbbb;
+}
+.add-to-basket {
+    background-color: transparent;
+    border: none;
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+    cursor: pointer;
+
+    &:hover,
+    &:focus,
+    &:active {
+        .add-to-basket__icon {
+            fill: #ef7f1a;
+        }
+    }
+
+    &__icon {
+        width: 20px;
+        transition: 0.3s;
+    }
 }
