--- a/static/css/main.css
+++ b/static/css/main.css
@@ -574,6 +574,12 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
     transform: rotate(360deg);
   }
 }
+.header {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+  background: #ffffff;
+}
 .header__wrapper {
   position: relative;
   display: grid;
@@ -635,7 +641,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
     -webkit-box-pack: end;
     -ms-flex-pack: end;
     justify-content: end;
-    gap: 20px;
+    gap: 31px;
     z-index: 5;
   }
 }
@@ -650,6 +656,15 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
     flex-direction: column-reverse;
     padding: 10px;
     background-color: #ffffff;
+  }
+}
+
+.top-60 {
+  padding-top: 80px;
+}
+@media (max-width: 1365.98px) {
+  .top-60 {
+    padding-top: 60px;
   }
 }
 
@@ -767,44 +782,91 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   text-transform: uppercase;
 }
 
+.search-btn {
+  cursor: pointer;
+}
+.search-btn:hover .search-btn__icon, .search-btn:focus .search-btn__icon, .search-btn:active .search-btn__icon, .search-btn._active .search-btn__icon {
+  fill: #ef7f1a;
+}
 .search-btn__icon {
   width: 20px;
-}
-
-.basket-link__icon {
-  width: 24px;
-}
-
-.search-block {
-  position: absolute;
-  top: 65px;
-  right: 130px;
-  padding: 20px 30px;
-  background-color: #f4f4f4;
-  border-radius: 2px;
-  border: 1px solid rgba(128, 128, 128, 0.4784313725);
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
-  -webkit-transform: scale3d(1, 0, 1);
-  transform: scale3d(1, 0, 1);
-  visibility: hidden;
 }
-.search-block__wrapper {
+
+.basket-link {
   position: relative;
 }
-.search-block__button {
+.basket-link:hover .basket-link__icon, .basket-link:focus .basket-link__icon, .basket-link:active .basket-link__icon {
+  fill: #ef7f1a;
+}
+.basket-link__icon {
+  width: 24px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.search-block {
+  background-color: rgba(33, 29, 29, 0.7019607843);
+  border-radius: 2px;
+  border: 1px solid rgba(128, 128, 128, 0.4784313725);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  height: 0;
+  padding: 0;
+  opacity: 0;
   position: absolute;
-  top: 3px;
-  right: 2px;
+  z-index: 3;
+  width: 100%;
+  visibility: hidden;
+}
+.search-block._active {
+  padding: 20px 0;
+  height: 85px;
+  opacity: 1;
+  visibility: visible;
+}
+@media (max-width: 1055.98px) {
+  .search-block._active {
+    padding: 15px 0;
+    height: 75px;
+  }
+}
+@media (max-width: 575.98px) {
+  .search-block._active {
+    height: 100vh;
+  }
+}
+.search-block__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  gap: 10px;
+}
+@media (max-width: 575.98px) {
+  .search-block__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 80%;
+  }
+}
+.search-block__button {
   border: 3px solid #ffffff;
   background-color: #ef7f1a;
   font-size: 18px;
   line-height: 1.5;
   text-transform: uppercase;
   color: #fefefe;
-  width: 80px;
-  height: 40px;
+  width: 200px;
+  height: 42px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -815,10 +877,16 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   -ms-flex-align: center;
   align-items: center;
 }
+@media (max-width: 419.98px) {
+  .search-block__button {
+    width: 100%;
+  }
+}
 .search-block__input {
   padding: 5px 20px 5px 15px;
-  height: 45px;
-  width: 280px;
+  height: 42px;
+  width: 100%;
+  max-width: 400px;
   border: 1px solid #ef7f1a;
   border-radius: 2px;
   outline: unset;
@@ -826,6 +894,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 
 .menu-btn {
   display: none;
+  cursor: pointer;
 }
 @media (max-width: 1365.98px) {
   .menu-btn {
@@ -849,6 +918,12 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
     background-color: #ef7f1a;
     border: 3px solid #fefefe;
     border-radius: 50%;
+    -webkit-transition: 0.3s linear;
+    -o-transition: 0.3s linear;
+    transition: 0.3s linear;
+  }
+  .menu-btn._active {
+    background-color: #cecece;
   }
 }
 .menu-btn span {
@@ -873,6 +948,29 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   .close-menu-btn {
     display: block;
   }
+}
+
+.counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #ef7f1a;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #fefefe;
+  position: absolute;
+  top: -6px;
+  right: -8px;
 }
 
 .catalog-section {
@@ -1164,6 +1262,11 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   grid-auto-columns: max-content;
   gap: 55px;
 }
+@media (max-width: 991.98px) {
+  .tabs__list {
+    gap: 20px;
+  }
+}
 .tabs__button {
   background-color: transparent;
   border: none;
@@ -1184,9 +1287,16 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   color: #ef7f1a;
   text-decoration: underline;
 }
+@media (max-width: 991.98px) {
+  .tabs__button {
+    font-size: 24px;
+  }
+}
 .sizes {
   position: relative;
   z-index: 5;
+  display: grid;
+  gap: 10px;
 }
 .sizes__wrapper {
   display: -webkit-box;
@@ -1245,13 +1355,43 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   cursor: pointer;
 }
 
+.best-deal__controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.best-deal__controls * {
+  z-index: 3;
+}
 .best-deal__item {
   width: 420px;
   padding: 12px;
+  display: grid;
+  gap: 15px;
 }
 .best-deal__item:hover .best-deal__hover {
   visibility: visible;
   opacity: 1;
+}
+.best-deal__item:hover .best-deal__content {
+  color: #ffffff;
+}
+.best-deal__item:hover .best-deal__controls {
+  color: #ffffff;
+}
+.best-deal__item:hover .add-to-basket__icon {
+  fill: #ffffff;
+}
+@media (max-width: 991.98px) {
+  .best-deal__item {
+    width: 280px;
+  }
 }
 .best-deal__hover {
   position: absolute;
@@ -1266,14 +1406,22 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   transition: 0.2s;
 }
 .best-deal__img {
-  width: 400px;
+  width: 100%;
   height: 529px;
   background-color: #ffffff;
   border: 1px solid #e8e8e8;
 }
+@media (max-width: 991.98px) {
+  .best-deal__img {
+    height: 420px;
+  }
+}
 .best-deal__content {
   display: grid;
-  gap: 20px;
+  gap: 10px;
+}
+.best-deal__content * {
+  z-index: 3;
 }
 .hover-content {
   position: absolute;
@@ -1297,4 +1445,39 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
   opacity: 0.8;
   width: 100%;
   height: 100%;
+}
+
+.price {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, -webkit-max-content);
+  grid-template-rows: repeat(2, max-content);
+}
+
+.cost {
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.sale-cost {
+  font-size: 24px;
+  text-decoration: line-through;
+  color: #bbbbbb;
+}
+
+.add-to-basket {
+  background-color: transparent;
+  border: none;
+  grid-row: 1/3;
+  grid-column: 2/3;
+  cursor: pointer;
+}
+.add-to-basket:hover .add-to-basket__icon, .add-to-basket:focus .add-to-basket__icon, .add-to-basket:active .add-to-basket__icon {
+  fill: #ef7f1a;
+}
+.add-to-basket__icon {
+  width: 20px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
 }
